Added cropped versions of cropped photos (and added duplicate of motorsailer even though it's already in the correct aspect ratio just to be consistent) + adjusted html to reference the cropped photos + adjusted CSS to assume photos are properly cropped so we can see if we forget to crop one in future.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,25 +23,25 @@
         <div class="main-cards">
             <div class="card">
                 <a href="./vessesl/catamaran">Catamaran
-                    <img src="./img/catamaran-photo.jpg" alt="Photo of a catamaran" class="card-image">
+                    <img src="./img/catamaran-photo_cropped.jpg" alt="Photo of a catamaran" class="card-image">
                     <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae faucibus lectus. Integer ornare nunc sed euismod varius.</p>
                 </a>
             </div>
             <div class="card">
                 <a href="./vessels/dinghy/">Dinghy
-                <img src="./img/dinghy-photo.jpg" alt="Photo of a dinghy" class="card-image">
+                <img src="./img/dinghy-photo_cropped.jpg" alt="Photo of a dinghy" class="card-image">
                 <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae faucibus lectus. Integer ornare nunc sed euismod varius.</p>
                 </a>
             </div>
             <div class="card">
                 <a href="./vessels/motorsailer/">Motorsailer
-                <img src="./img/motorsailer-photo.jpg" alt="Photo of a motorsailer" class="card-image">
+                <img src="./img/motorsailer-photo_cropped.jpg" alt="Photo of a motorsailer" class="card-image">
                 <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae faucibus lectus. Integer ornare nunc sed euismod varius.</p>
                 </a>
             </div>
             <div class="card">
                 <a href="./vessels/historic/">Historic
-                <img src="./img/dutch_man-o-war-photo.jpg" alt="Needed: Crew of fifty strapping lads from the colonies." class="card-image">
+                <img src="./img/dutch_man-o-war-photo_cropped.jpg" alt="Needed: Crew of fifty strapping lads from the colonies." class="card-image">
                 <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae faucibus lectus. Integer ornare nunc sed euismod varius.</p>
                 </a>
             </div>
