--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,15 @@
 <body>
     <header class="page-header">
         <h1>RateCraft</h1>
-        <div class="searchbar">
+        <div class="navbar">
+            <div class="hashtag-cloud">
+                <ul>
+                    <li><a href="./hashtags/cruisers.html">#cruisers</a></li>
+                    <li><a href="./hashtags/daysailors.html">#daysailors</a></li>
+                    <li><a href="./hashtags/racers.html">#racers</a></li>
+                    <li><a href="./hashtags/seagoing.html">#seagoing</a></li>
+                </ul>
+            </div>
             <form action="#" class="search spacer">
                 <input type="text" placeholder="Search" name="search">
                 <button type="submit">Go</button>
@@ -22,7 +30,7 @@
     <main>
         <div class="main-cards">
             <div class="card">
-                <a href="./vessesl/catamaran">Catamaran
+                <a href="./vessels/catamaran/">Catamaran
                     <img src="./img/catamaran-photo_cropped.jpg" alt="Photo of a catamaran" class="card-image">
                     <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae faucibus lectus. Integer ornare nunc sed euismod varius.</p>
                 </a>
