Added Beach Cat subcategory and sample review/score templating

--- a/src/main/resources/static/vessels/catamaran/index.html
+++ b/src/main/resources/static/vessels/catamaran/index.html
@@ -21,7 +21,8 @@
         <div class="photostack">
             <ul>
                 <li class="photostack--image-1">
-                    <a href="#"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
+                    <p>Beach Cat</p>
+                    <a href="beachcat.html"><img src="../../img/beachcat.jpg" alt="Stock photo of a cruising catamaran"></a>
                 </li>
                 <li class="photostack--image-2">
                     <a href="#"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
