all working static pages for review site pre java

--- a/src/main/resources/static/vessels/catamaran/index.html
+++ b/src/main/resources/static/vessels/catamaran/index.html
@@ -22,13 +22,13 @@
             <ul>
                 <li class="photostack--image-1">
                     <p>Beach Cat</p>
-                    <a href="beachcat.html"><img src="../../img/beachcat.jpg" alt="Stock photo of a cruising catamaran"></a>
+                    <a href="./beachcat.html"><img src="../../img/beachcat.jpg" alt="Stock photo of a cruising catamaran"></a>
                 </li>
                 <li class="photostack--image-2">
-                    <a href="#"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
+                    <a href="./oceancat.html"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
                 </li>
                 <li class="photostack--image-3">
-                    <a href="#"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
+                    <a href="./racingcat.html"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
                 </li>
             </ul>
         </div>
