--- a/src/main/resources/static/vessels/dinghy/index.html
+++ b/src/main/resources/static/vessels/dinghy/index.html
@@ -21,13 +21,13 @@
         <div class="photostack">
             <ul>
                 <li>
-                    <a href="#"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
+                    <a href="./cruising.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
+                    <a href="./racing.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
+                    <a href="./trainer.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
                 </li>
             </ul>
         </div>
