--- a/src/main/resources/static/vessels/historic/index.html
+++ b/src/main/resources/static/vessels/historic/index.html
@@ -21,13 +21,13 @@
         <div class="photostack">
             <ul>
                 <li>
-                    <a href="#"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
+                    <a href="./manowar.html"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
+                    <a href="./schooner.html"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
+                    <a href="./clipper.html"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
                 </li>
             </ul>
         </div>
