--- a/src/main/resources/static/vessels/motorsailer/index.html
+++ b/src/main/resources/static/vessels/motorsailer/index.html
@@ -21,13 +21,13 @@
         <div class="photostack">
             <ul>
                 <li>
-                    <a href="#"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
+                    <a href="./shallow-draft.html"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
+                    <a href="./ketch.html"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
                 </li>
                 <li>
-                    <a href="#"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
+                    <a href="./luxury.html"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
                 </li>
             </ul>
         </div>
