--- a/src/main/resources/static/vessels/catamaran/index.html
+++ b/src/main/resources/static/vessels/catamaran/index.html
@@ -21,15 +21,16 @@
         <div class="photostack">
             <ul>
                 <li class="photostack--image-1">
-                    <p>Beach Cat</p>
+                    <h3>Beach Cat</h3>
                     <a href="./beachcat.html"><img src="../../img/beachcat.jpg" alt="Stock photo of a cruising catamaran"></a>
-                </li>
-                <li class="photostack--image-2">
-                    <a href="./oceancat.html"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
-                </li>
-                <li class="photostack--image-3">
-                    <a href="./racingcat.html"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
-                </li>
+                    <li class="photostack--image-2">
+                        <h3>Ocean Cat</h3>
+                        <a href="./oceancat.html"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
+                    </li>
+                    <li class="photostack--image-3">
+                        <h3>Racing Cat</h3>
+                        <a href="./racingcat.html"><img src="../../img/catamaran-photo.jpg" alt="Stock photo of a cruising catamaran"></a>
+                    </li>
             </ul>
         </div>
     </div>
