--- a/src/main/resources/static/vessels/dinghy/index.html
+++ b/src/main/resources/static/vessels/dinghy/index.html
@@ -20,14 +20,20 @@
     <div class="main">
         <div class="photostack">
             <ul>
-                <li>
+                <li class="photostack--image1">
+                    <h3>Cruising</h3>
                     <a href="./cruising.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
+
                 </li>
-                <li>
+                <li class="photostack--image2">
+                    <h3>Crusing</h3>
                     <a href="./racing.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
+
                 </li>
-                <li>
+                <li class="photostack--image3">
+                    <h3>Racing</h3>
                     <a href="./trainer.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
+
                 </li>
             </ul>
         </div>
