--- a/src/main/resources/static/vessels/historic/index.html
+++ b/src/main/resources/static/vessels/historic/index.html
@@ -20,13 +20,16 @@
     <div class="main">
         <div class="photostack">
             <ul>
-                <li>
+                <li class="photostack--photo1">
+                    <h3>Man-O-War</h3>
                     <a href="./manowar.html"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
                 </li>
-                <li>
+                <li class="photostack--photo2">
+                    <h3>Schooner</h3>
                     <a href="./schooner.html"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
                 </li>
-                <li>
+                <li class="photostack--photo3">
+                    <h3>Clipper</h3>
                     <a href="./clipper.html"><img src="../../img/dutch_man-o-war-photo.jpg" alt="Stock photo of a painting of a Dutch Man-\'o-War ship"></a>
                 </li>
             </ul>
