--- a/src/main/resources/static/vessels/motorsailer/index.html
+++ b/src/main/resources/static/vessels/motorsailer/index.html
@@ -20,13 +20,16 @@
     <div class="main">
         <div class="photostack">
             <ul>
-                <li>
+                <li class="photostack--image1">
+                    <h3>Shallow-Draft</h3>
                     <a href="./shallow-draft.html"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
                 </li>
-                <li>
+                <li class="photostack--image2">
+                    <h3>Ketch</h3>
                     <a href="./ketch.html"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
                 </li>
-                <li>
+                <li class="photostack--image3">
+                    <h3>Luxury</h3>
                     <a href="./luxury.html"><img src="../../img/motorsailer-photo.jpg" alt="Stock photo of a luxury motorsailer"></a>
                 </li>
             </ul>
