second push AM work

--- a/src/main/resources/static/vessels/dinghy/index.html
+++ b/src/main/resources/static/vessels/dinghy/index.html
@@ -21,17 +21,17 @@
         <div class="photostack">
             <ul>
                 <li class="photostack--image1">
-                    <h3>Cruising</h3>
+                    <h2>Cruising</h2>
                     <a href="./cruising.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
 
                 </li>
                 <li class="photostack--image2">
-                    <h3>Crusing</h3>
+                    <h2>Racing</h2>
                     <a href="./racing.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
 
                 </li>
                 <li class="photostack--image3">
-                    <h3>Racing</h3>
+                    <h2>Trainer</h2>
                     <a href="./trainer.html"><img src="../../img/dinghy-photo.jpg" alt="Stock photo of a simple little dinghy on a trailer"></a>
 
                 </li>
