Created some models and controllers for working with our boat types, and a template for the home page.

--- a/src/main/resources/static/vessels/catamaran/beachcat.html
+++ b/src/main/resources/static/vessels/catamaran/beachcat.html
@@ -25,7 +25,7 @@
         <div class="review">
             <div class="craft-score">
                 <ul>
-                    <li th:text="'Speed: ' + ${ReviewData.speed}"></li>
+                    <li th:text="'Speed: ' + ${org.wecancodeit.reviews.models.ReviewData.speed}"></li>
                     <li>Comfort: </li>
                     <li>Multi-day trip suitability: </li>
                     <li>Cool-factor: </li>
