HOLY F. We got it to work and now we are cooking with butane. Updates to database, updates to Thymeleaf templates and finally got images to show up. Things are poggering along.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -62,7 +62,7 @@
         <div class="main-cards">
             <div class="card">
                 <a href="./vessels/catamaran/">Catamaran
-                    <img src="./img/catamaran-photo_cropped.jpg" alt="Photo of a catamaran" class="card-image">
+                    <img src="img/Catamaran-photo_cropped.jpg" alt="Photo of a catamaran" class="card-image">
                     <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae
                         faucibus lectus. Integer ornare nunc sed euismod varius.</p>
                 </a>
@@ -83,7 +83,7 @@
             </div>
             <div class="card">
                 <a href="./vessels/historic/">Historic
-                    <img src="./img/dutch_man-o-war-photo_cropped.jpg"
+                    <img src="img/Historic-photo_cropped.jpg"
                         alt="Needed: Crew of fifty strapping lads from the colonies." class="card-image">
                     <p class="description">In posuere aliquet nibh congue iaculis. Ut eu purus turpis. Mauris vitae
                         faucibus lectus. Integer ornare nunc sed euismod varius.</p>
